# markdown-github-desktop

./: .env.example  .gitignore  CHANGELOG_v0.10.10.md  CHANGELOG_v0.10.12.md  CHANGELOG_v0.10.13.md  CHANGELOG_v0.10.14.md  CHANGELOG_v0.10.15.md  CHANGELOG_v0.10.16.md  CHANGELOG_v0.10.17.md  CHANGELOG_v0.10.18.md  CHANGELOG_v0.10.19.md  CHANGELOG_v0.10.20.md  CHANGELOG_v0.10.8.md  CHANGELOG_v0.10.9.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_v0.10.10.md  IMPLEMENTATION_REPORT_v0.10.14.md  IMPLEMENTATION_REPORT_v0.10.15.md  IMPLEMENTATION_REPORT_v0.10.16.md  IMPLEMENTATION_REPORT_v0.10.17.md  IMPLEMENTATION_REPORT_v0.10.18.md  IMPLEMENTATION_REPORT_v0.10.19.md  IMPLEMENTATION_REPORT_v0.10.20.md  IMPLEMENTATION_REPORT_v0.10.7.md  IMPLEMENTATION_REPORT_v0.10.8.md  IMPLEMENTATION_REPORT_v0.10.9.md  LICENSE  NOTICE  README.md  TESTING.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.paper-notes/: export-profiles.json  project.json
docs/: ARCHITECTURE_RESEARCH_WORKBENCH.md  CHANGELOG_0.10.0-research-workbench.md  CHANGELOG_0.10.1-pane-interactions.md  CHANGELOG_0.10.11-latexmk-template-build.md  CHANGELOG_0.10.3-pane-dblclick-markdown-style.md  CHANGELOG_0.2.3.md  CHANGELOG_0.2.4.md  CHANGELOG_0.2.5.md  CHANGELOG_0.2.6.md  CHANGELOG_0.2.7.md  CHANGELOG_0.2.8.md  CHANGELOG_0.2.9.md  CHANGELOG_0.2.md  CHANGELOG_0.3.0.md  CHANGELOG_0.3.1.md  CHANGELOG_0.3.2.md  (+26 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+59 files in other folders)
