[package]
name = "markdown-github-desktop"
version = "0.1.0"
description = "A cross-platform Markdown editor with GitHub sync"
authors = ["Markdown GitHub Desktop Contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "markdown_github_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.3"
