[package]
name = "markdown-latex-git-desktop"
version = "0.10.11"
description = "A cross-platform Markdown/LaTeX editor with local Git workspace and manual GitHub push"
authors = ["Scholia Studio Contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "markdown_latex_git_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.3"
